# Roary-Rag-system

./: .dockerignore  .env.example  .gitignore  .vercelignore  ARCHITECTURE.md  CLAUDE.md  Dockerfile  Dockerfile.backend  QUICKSTART.md  README.md  ROARY.md  cube_loader.css  docker-compose.yml  install_cloudflare_local.sh  main.py  pyproject.toml  render.yaml  requirements.txt  vercel.json
api/: index.py  requirements.txt
data/chats/: chat_octocat_Spoon-Knife_20260414T184828Z.json
frontend/: .dockerignore  Dockerfile.frontend  package-lock.json  package.json  vercel.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
master_boilerplate/: .env.example  ARCHITECTURE.md  CLAUDE.md  PRD.md  pyproject.toml
src/roary/agents/: __init__.py  actors.py  crew.py  tasks.py
src/roary/api/: main.py
src/roary/crawler/: __init__.py  github.py  parser.py
src/roary/rag/: __init__.py  chroma_db.py  ingester.py
